# Kivy-mediapipe-multiprocessing

./: .gitignore  FINALTEST_mediapipe_kivy_multiprocessing.py  README.md  TEST_kivy_from_subprocess.py  TEST_kivy_from_subprocess3.py  main.py  main2.py  main3.py  main4.py  main5.py  pyproject.toml
previous tests/: TEST_kivy_from_subprocess3.py
