[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Filipe Marchesini <filipe.marchesini@gmail.com>"]
readme = "README.md"
packages = [{include = "test_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
numpy = "^1.23.5"
kivy = "^2.1.0"
dill = "^0.3.6"
mediapipe-silicon = "^0.8.11"
trio = "^0.22.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
